k8s/dev/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: library-service
  namespace: dev

spec:
  selector:
    app: library-app

  ports:
    - port: 80
      targetPort: 5000

  type: ClusterIP
