k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: library-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:

    - host: dev-library.local

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: library-service
                port:
                  number: 80
